--- a/Use-case-nas/file3.html
+++ b/Use-case-nas/file3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>NAS Question 3</title>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="jquery-latest.js"></script>
 <style>
   #outerWrapper {
     width: 800px;  
