--- a/Use-case-nas/file1.html
+++ b/Use-case-nas/file1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>NAS Question 1</title>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="jquery-latest.js"></script>
 <style>
   #outerWrapper {
     width: 800px;  
@@ -36,7 +36,7 @@ $( document ).ready(function() {
     $.getJSON("data1.json", function(data) {
       $.each(data,function (k,v) {
         var theparam = k;
-        var thedata = v;
+        var thedata = v*2.5;
         theY = chartHeight - thedata;
         theX = theX + theSpace;
         theContext.fillStyle = theFills[i];
