--- a/Use-case-nas/file2.html
+++ b/Use-case-nas/file2.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-<h1>Q2 How do boys and girls perform across states?</h1>
+<h2>Q2. How do boys and girls perform across states?</h2>
 <div id="outerWrapper">
-  <canvas id="chart1" width="2200" height="300"></canvas>
+  <canvas id="chart1" width="1000" height="300"></canvas>
 </div>
 <script>
 $( document ).ready(function() {
@@ -50,5 +50,6 @@ $( document ).ready(function() {
   }
 });
 </script>
+<p>Data was grouped by on two basis first states and then gender.</p>
 </body>
 </html>
