--- a/Use-case-nas/file3.html
+++ b/Use-case-nas/file3.html
@@ -6,15 +6,15 @@
 <script src="jquery-latest.js"></script>
 <style>
   #outerWrapper {
-    width: 800px;  
-    margin: 1em auto;
+    display: block;
+    margin: 0 auto;
   }
   canvas {
     border: 1px solid #000;  
   }
   #lowerWrapper {
-    width: 800px;  
-    margin: 1em auto;
+    display: block;
+    margin: 0 auto;
   }
   canvas {
     border: 1px solid #000;  
